--- a/blocks.html
+++ b/blocks.html
@@ -3,51 +3,46 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>FrostMines — RC114 | SOVEREIGN_DOPAMINE</title>
+<title>⛓️‍💥 duku — RC123 | x1337_CRACK</title>
 <style>
 :root {
-  --bg: #000; --aqua: oklch(75% 0.12 210); --aqua-safe: color-mix(in oklch, oklch(75% 0.12 210) 92%, black);
-  --aqua-dim: oklch(40% 0.08 210); --gold: oklch(80% 0.15 85); --flash-bg: oklch(15% 0.04 210);
-  --text-soft: oklch(85% 0 0); --glow: 0 0 clamp(3px, 1vw, 6px) oklch(75% 0.12 210 / 0.6);
+  --bg: #000; --aqua: oklch(75% 0.12 210); --gold: oklch(80% 0.18 85);
+  --flash-bg: oklch(15% 0.04 210); --glow: 0 0 clamp(4px, 1.5vw, 10px) oklch(75% 0.12 210 / 0.8);
 }
 * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: "Courier New", monospace; }
-body { background: var(--bg); color: var(--text-soft); height: 100dvh; overflow: hidden; display: flex; flex-direction: column; align-items: center; touch-action: none; padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); transition: opacity 0.5s ease; }
-body.flash { background: var(--flash-bg); transition: background 120ms cubic-bezier(.2,.8,.2,1); }
-.ticker { width: 100%; background: oklch(10% 0 0); border-bottom: 1px solid oklch(18% 0 0); padding: 6px; font-size: 9px; color: var(--aqua-dim); overflow: hidden; white-space: nowrap; }
-.ticker-move { display: inline-block; animation: scroll 85s linear infinite; will-change: transform; }
+body { background: var(--bg); color: oklch(90% 0 0); height: 100dvh; overflow: hidden; display: flex; flex-direction: column; align-items: center; touch-action: none; padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
+body.flash { background: var(--flash-bg); transition: background 80ms cubic-bezier(.1,.9,.1,1); }
+.ticker { width: 100%; background: oklch(10% 0 0); border-bottom: 1px solid oklch(18% 0 0); padding: 6px; font-size: 8px; color: oklch(40% 0.08 210); overflow: hidden; white-space: nowrap; }
+.ticker-move { display: inline-block; animation: scroll 95s linear infinite; }
 @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
-.header { width: 360px; display: flex; justify-content: space-between; padding: 14px 0; border-bottom: 2px solid oklch(20% 0 0); z-index: 10; }
-#timer { font-size: 22px; font-weight: 900; color: oklch(75% 0.15 330); text-shadow: 0 0 6px oklch(75% 0.15 330 / 0.5); }
-#yield { font-size: 28px; font-weight: 900; color: var(--aqua); text-shadow: var(--glow); }
-.grid-wrap { padding: 6px; background: oklch(12% 0 0); border-radius: 14px; border: 2px solid oklch(22% 0 0); margin-top: 14px; contain: strict; }
+.header { width: 360px; display: flex; justify-content: space-between; padding: 10px 0; border-bottom: 2px solid oklch(20% 0 0); }
+#yield { font-size: 26px; font-weight: 900; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
+.portfolio { width: 360px; display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px; padding: 5px 0; font-size: 7px; color: oklch(40% 0.08 210); border-bottom: 1px solid #111; }
+.grid-wrap { padding: 6px; background: oklch(12% 0 0); border-radius: 14px; border: 2px solid oklch(22% 0 0); margin-top: 10px; box-shadow: 0 0 20px rgba(0,0,0,1); }
 #grid { display: grid; grid-template-columns: repeat(9, 1fr); gap: 2px; width: 340px; height: 340px; }
-.cell { background: oklch(6% 0 0); border-radius: 2px; border: 1px solid oklch(14% 0 0); }
-.filled { background: var(--aqua-safe); box-shadow: var(--glow); border: none; z-index: 2; }
-.snap-guide { background: oklch(75% 0.12 210 / 0.15) !important; border: 1px solid oklch(55% 0.10 210); }
-.tray { width: 360px; height: 120px; display: flex; justify-content: space-around; align-items: center; margin-top: 14px; background: oklch(10% 0 0 / 0.3); border-radius: 20px; }
-.slot { width: 100px; height: 100px; display: flex; align-items: center; justify-content: center; transform: scale(1.1); }
-.drag-active { position: fixed; pointer-events: none; z-index: 1000; transform: translateY(-135px) scale(1.15); filter: drop-shadow(var(--glow)); }
-.ignite-btn { width: 85%; padding: 18px; margin-top: auto; margin-bottom: 30px; border: 2px solid var(--aqua); background: transparent; color: var(--aqua); font-weight: 900; letter-spacing: 5px; border-radius: 50px; text-shadow: var(--glow); cursor: pointer; transition: all 0.2s ease; }
-#doge-overlay { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); font-size: 120px; z-index: 2000; pointer-events: none; transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-.wow-show { transform: translate(-50%, -50%) scale(1.2) rotate(10deg) !important; }
+.cell { background: oklch(6% 0 0); border-radius: 2px; border: 1px solid oklch(14% 0 0); display: flex; align-items: center; justify-content: center; font-size: 14px; }
+.filled { background: var(--aqua); box-shadow: var(--glow); border: none; }
+.ignite-btn { width: 85%; padding: 20px; margin-top: auto; margin-bottom: 30px; border: 2px solid var(--aqua); background: transparent; color: var(--aqua); font-weight: 900; letter-spacing: 5px; border-radius: 50px; cursor: pointer; transition: 0.1s; }
+.ignite-btn:active { transform: scale(0.95); background: rgba(0,242,255,0.1); }
 </style>
 </head>
 <body onload="init()">
-<div id="doge-overlay">🐶</div>
 <div class="ticker">
-  <div class="ticker-move">
-    RC114: SOVEREIGN_DOPAMINE | CAP: 80M | STAKE: 20M | REWARD: 13.37/BLOCK | HALVING: 5y 8m | ID: voluntaryistj.base.eth | PROTECT: 0x8eA6...10E6 | @agorajay -> AMIAH_DOODLES
-  </div>
+  <div class="ticker-move">⛓️‍💥 duku: RC123 | MULTIPLIER: x1337 | CAP: 80M | STAKE: 20M | FETH: 0xed87...bacf | FROST: 0x2c77...0745 | BTC: 0x6a5c...a571 | ID: voluntaryistj.base.eth</div>
 </div>
 <div class="header">
-  <div><div style="color:var(--aqua); font-size:10px; font-weight:900;">BLOCK CLOCK: 13.37 FTC</div><div id="timer">05:00</div></div>
-  <div style="text-align:right;"><small style="color:var(--aqua-dim);">MINED_YIELD</small><div id="yield">0.0000</div></div>
+  <div><div style="color:var(--aqua); font-size:10px; font-weight:900;">DUKU_BLOCK: 13.37 FRST</div><div id="timer" style="font-size:18px; color:oklch(75% 0.15 330);">05:00</div></div>
+  <div style="text-align:right;"><small style="color:oklch(40% 0.08 210);">TOTAL_MINED</small><div id="yield">0.0000</div></div>
+</div>
+<div class="portfolio">
+  <div>FETH:<span id="p-feth">0.0</span></div><div>FRST:<span id="p-frst">0.0</span></div><div>BTC:<span id="p-btc">0.0</span></div><div>USD:<span id="p-usd">0.0</span></div>
 </div>
 <div class="grid-wrap"><div id="grid"></div></div>
-<div id="tray" class="tray"></div>
-<button class="ignite-btn" onclick="igniteEngine()">IGNITE DOPAMINE NODE</button>
+<div id="tray" style="width:360px; height:120px; display:flex; justify-content:space-around; align-items:center; margin-top:14px;"></div>
+<button class="ignite-btn" onclick="ignite()">IGNITE x1337 GENE</button>
 <script>
-let board = Array(81).fill(0), ftc_yield = 0, b_timer = 300, active = false, audio = null, cells = [], dragging = null, streak = 0, sessionStart = 0;
+let board = Array(81).fill(0), b_timer = 300, active = false, audio = null, cells = [], dragging = null, streak = 0, sessionStart = 0;
+let mined = { feth: 0, frst: 0, btc: 0, usd: 0 };
 const shapes = [[[1,1,1],[1,1,1]], [[1,1,1]], [[1,1],[1,1]], [[1]], [[1,1,1,1]], [[1,1,1],[0,1,0]], [[1,1,1,1,1]]];
 function init() {
   const g = document.getElementById("grid"), f = document.createDocumentFragment();
@@ -56,99 +51,63 @@ function init() {
   refreshTray();
 }
 function adaptiveGain(b) { const m = (Date.now() - sessionStart) / 60000; return b * Math.max(0.65, 1 - m * 0.025); }
-async function igniteEngine() {
+async function ignite() {
   if (!audio) {
     audio = new AudioContext(); if (audio.state === "suspended") await audio.resume();
     sessionStart = Date.now(); active = true; document.querySelector(".ignite-btn").style.display = "none";
-    setInterval(() => {
-      if (!active) return;
-      if (b_timer > 0) { b_timer--; let m = Math.floor(b_timer / 60), s = b_timer % 60; document.getElementById("timer").innerText = `${m}:${s < 10 ? '0'+s : s}`; }
-      else b_timer = 300;
-    }, 1000);
     setupBinaural(38, -1, 0.002); setupBinaural(49.5, 1, 0.002);
+    setInterval(() => { if (b_timer > 0) { b_timer--; let m = Math.floor(b_timer / 60), s = b_timer % 60; document.getElementById("timer").innerText = `${m}:${s < 10 ? '0'+s : s}`; } else b_timer = 300; }, 1000);
   }
 }
-function setupBinaural(f, p, v) {
-  const o = audio.createOscillator(), s = audio.createStereoPanner(), g = audio.createGain();
-  o.frequency.value = f; s.pan.value = p; g.gain.value = adaptiveGain(v);
-  o.connect(s).connect(g).connect(audio.destination); o.start();
-}
-function percussive(f, d, vol) {
-  const o = audio.createOscillator(), g = audio.createGain();
-  o.frequency.setValueAtTime(f, audio.currentTime); o.connect(g).connect(audio.destination);
-  g.gain.setValueAtTime(adaptiveGain(vol), audio.currentTime); g.gain.exponentialRampToValueAtTime(0.001, audio.currentTime + d);
-  o.start(); o.stop(audio.currentTime + d);
-}
-function refreshTray() {
-  const t = document.getElementById("tray"), f = document.createDocumentFragment();
-  for (let i = 0; i < 3; i++) {
-    const s = shapes[Math.floor(Math.random() * shapes.length)], slot = document.createElement("div");
-    slot.className = "slot"; slot.appendChild(renderPiece(s, i, 20)); f.appendChild(slot);
-  }
-  t.innerHTML = ""; t.appendChild(f);
-}
+function setupBinaural(f, p, v) { const o = audio.createOscillator(), s = audio.createStereoPanner(), g = audio.createGain(); o.frequency.value = f; s.pan.value = p; g.gain.value = v; o.connect(s).connect(g).connect(audio.destination); o.start(); }
+function percussive(f, d, vol) { const o = audio.createOscillator(), g = audio.createGain(); o.frequency.setValueAtTime(f, audio.currentTime); o.connect(g).connect(audio.destination); g.gain.setValueAtTime(vol, audio.currentTime); g.gain.exponentialRampToValueAtTime(0.001, audio.currentTime + d); o.start(); o.stop(audio.currentTime + d); }
+function refreshTray() { const t = document.getElementById("tray"), f = document.createDocumentFragment(); for (let i = 0; i < 3; i++) { const s = shapes[Math.floor(Math.random() * shapes.length)], slot = document.createElement("div"); slot.className = "slot"; slot.style.width="100px"; slot.style.height="100px"; slot.style.display="flex"; slot.style.alignItems="center"; slot.style.justifyContent="center"; slot.appendChild(renderPiece(s, i, 20)); f.appendChild(slot); } t.innerHTML = ""; t.appendChild(f); }
 function renderPiece(s, idx, sz) {
   const c = document.createElement("div"); c.style.display = "grid"; c.style.gridTemplateColumns = `repeat(${s[0].length}, ${sz}px)`; c.style.gap = "2px";
-  s.forEach(r => r.forEach(v => {
-    const d = document.createElement("div"); d.style.width = sz + "px"; d.style.height = sz + "px";
-    if (v) d.className = "cell filled"; else d.style.opacity = "0"; c.appendChild(d);
-  }));
-  if (idx !== -1) c.ontouchstart = (e) => startDrag(e, s, idx);
-  return c;
+  s.forEach(r => r.forEach(v => { const d = document.createElement("div"); d.style.width = sz + "px"; d.style.height = sz + "px"; if (v) { d.className = "cell filled"; } else d.style.opacity = "0"; c.appendChild(d); }));
+  if (idx !== -1) c.ontouchstart = (e) => startDrag(e, s, idx); return c;
 }
-function startDrag(e, s, idx) { if (!active) return; e.preventDefault(); dragging = { s, idx, el: renderPiece(s, -1, 38) }; dragging.el.classList.add("drag-active"); document.body.appendChild(dragging.el); moveAt(e.touches[0]); }
-function moveAt(t) {
-  if (!dragging) return; dragging.el.style.left = t.clientX - (dragging.el.offsetWidth / 2) + "px"; dragging.el.style.top = t.clientY + "px";
-  cells.forEach(c => c.classList.remove("snap-guide")); const target = document.elementFromPoint(t.clientX, t.clientY - 135);
-  if (target && target.classList.contains('cell')) { const id = parseInt(target.id.split("-")[1]); if (canPlace(id, dragging.s)) showSnap(id, dragging.s); }
-}
+function startDrag(e, s, idx) { if (!active) return; e.preventDefault(); dragging = { s, idx, el: renderPiece(s, -1, 38) }; dragging.el.style.position = "fixed"; dragging.el.style.pointerEvents = "none"; dragging.el.style.zIndex = "1000"; document.body.appendChild(dragging.el); moveAt(e.touches[0]); }
+function moveAt(t) { if (!dragging) return; dragging.el.style.left = t.clientX - (dragging.el.offsetWidth / 2) + "px"; dragging.el.style.top = t.clientY + "px"; }
 document.addEventListener("touchmove", (e) => { if (dragging) { e.preventDefault(); moveAt(e.touches[0]); } }, { passive: false });
-function canPlace(id, s) {
-  const r = Math.floor(id / 9), c = id % 9;
-  for (let i = 0; i < s.length; i++) for (let j = 0; j < s[0].length; j++) if (s[i][j]) { let nr = r+i, nc = c+j; if (nr >= 9 || nc >= 9 || board[nr*9+nc]) return false; }
-  return true;
-}
-function showSnap(id, s) { const r = Math.floor(id / 9), c = id % 9; s.forEach((row, i) => row.forEach((val, j) => { if (val) cells[(r+i)*9+(c+j)].classList.add("snap-guide"); })); }
+function canPlace(id, s) { const r = Math.floor(id/9), c = id%9; for (let i=0; i<s.length; i++) for (let j=0; j<s[0].length; j++) if (s[i][j]) { let nr=r+i, nc=c+j; if (nr>=9 || nc>=9 || board[nr*9+nc]) return false; } return true; }
 document.ontouchend = (e) => {
-  if (!dragging) return; const target = document.elementFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY - 135);
-  if (target && target.classList.contains("cell")) {
-    const id = parseInt(target.id.split("-")[1]);
-    if (canPlace(id, dragging.s)) {
-      placePiece(id, dragging.s); document.getElementById("tray").children[dragging.idx].innerHTML = "";
-      if ([...document.getElementById("tray").querySelectorAll(".slot")].every(s => s.innerHTML === "")) refreshTray();
-    }
+  if (!dragging) return; const t = document.elementFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY - 135);
+  if (t && t.classList.contains("cell")) {
+    const id = parseInt(t.id.split("-")[1]);
+    if (canPlace(id, dragging.s)) { placePiece(id, dragging.s); document.getElementById("tray").children[dragging.idx].innerHTML = ""; if ([...document.getElementById("tray").querySelectorAll(".slot")].every(s => s.innerHTML === "")) refreshTray(); }
   }
-  dragging.el.remove(); dragging = null; cells.forEach(c => c.classList.remove("snap-guide"));
+  dragging.el.remove(); dragging = null;
 };
 function placePiece(id, s) {
-  const r = Math.floor(id / 9), c = id % 9;
-  s.forEach((row, i) => row.forEach((val, j) => { if (val) { board[(r + i) * 9 + c + j] = 1; cells[(r + i) * 9 + c + j].className = "cell filled"; } }));
+  const r=Math.floor(id/9), c=id%9; s.forEach((row, i) => row.forEach((val, j) => { if (val) { board[(r+i)*9+c+j]=1; cells[(r+i)*9+c+j].className = "cell filled"; if(Math.random()<0.08) cells[(r+i)*9+c+j].innerText = "⛓️‍💥"; } }));
   percussive(620 + (streak * 100), 0.04, 0.05); if (navigator.vibrate) navigator.vibrate([15, 8, 25]); checkClears();
 }
 function checkClears() {
-  let rs = [], cs = [], cleared = [];
-  for (let i = 0; i < 9; i++) {
-    let rF = true, cF = true;
-    for (let j = 0; j < 9; j++) { if (!board[i * 9 + j]) rF = false; if (!board[j * 9 + i]) cF = false; }
-    if (rF) { rs.push(i); for (let j = 0; j < 9; j++) cleared.push(i * 9 + j); }
-    if (cF) { cs.push(i); for (let j = 0; j < 9; j++) cleared.push(j * 9 + i); }
+  let rs=[], cs=[], sqs=[], cleared=[];
+  for (let i=0; i<9; i++) {
+    let rF=true, cF=true; for (let j=0; j<9; j++) { if (!board[i*9+j]) rF=false; if (!board[j*9+i]) cF=false; }
+    if (rF) { rs.push(i); for (let j=0; j<9; j++) cleared.push(i*9+j); }
+    if (cF) { cs.push(i); for (let j=0; j<9; j++) cleared.push(j*9+i); }
   }
-  if (rs.length + cs.length > 0) {
-    streak++; ftc_yield += (rs.length + cs.length) * 1.337 * (1 + streak * 0.1);
-    document.getElementById("yield").innerText = ftc_yield.toFixed(4);
-    document.body.classList.add("flash"); setTimeout(() => document.body.classList.remove("flash"), 120);
-    if (Math.random() < (0.08 + streak * 0.015)) triggerDoge();
-    rs.forEach(r => { for (let c = 0; c < 9; c++) board[r * 9 + c] = 0; });
-    cs.forEach(c => { for (let r = 0; r < 9; r++) board[r * 9 + c] = 0; });
-    requestAnimationFrame(() => cleared.forEach(i => cells[i].classList.remove("filled")));
-    percussive(150, 0.4, 0.08);
+  for (let y=0; y<9; y+=3) for (let x=0; x<9; x+=3) {
+    let sF=true; for (let i=0; i<3; i++) for (let j=0; j<3; j++) if (!board[(y+i)*9+(x+j)]) sF=false;
+    if (sF) { sqs.push({y,x}); for (let i=0; i<3; i++) for (let j=0; j<3; j++) cleared.push((y+i)*9+(x+j)); }
+  }
+  if (cleared.length > 0) {
+    streak++; 
+    let base = (cleared.length/9) * 1.337 * (1 + streak * 0.1);
+    mined.feth += base * 0.05; mined.frst += base; mined.btc += base * 0.0001; mined.usd += base * 0.5;
+    document.getElementById("yield").innerText = (mined.feth).toFixed(4);
+    document.getElementById("p-feth").innerText = mined.feth.toFixed(3);
+    document.getElementById("p-frst").innerText = mined.frst.toFixed(1);
+    document.getElementById("p-btc").innerText = mined.btc.toFixed(5);
+    document.getElementById("p-usd").innerText = mined.usd.toFixed(1);
+    document.body.classList.add("flash"); setTimeout(() => document.body.classList.remove("flash"), 80);
+    cleared.forEach(i => { board[i]=0; cells[i].innerText = ''; });
+    requestAnimationFrame(() => cleared.forEach(i => cells[i].className = "cell"));
+    percussive(1337 + (streak * 200), 0.4, 0.08); if (navigator.vibrate) navigator.vibrate([30, 20, 30, 40, 20, 50]);
   } else { streak = 0; }
-}
-function triggerDoge() {
-  const d = document.getElementById("doge-overlay"); d.classList.add("wow-show");
-  if (navigator.vibrate) navigator.vibrate([20, 10, 20, 30, 10, 40, 80]);
-  percussive(660, 0.2, 0.1); setTimeout(() => percussive(880, 0.2, 0.1), 100);
-  setTimeout(() => d.classList.remove("wow-show"), 1500);
 }
 </script>
 </body>
