--- a/blocks.html
+++ b/blocks.html
@@ -3,112 +3,111 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>⛓️‍💥 duku — RC123 | x1337_CRACK</title>
+<title>⛓️‍💥 duku — RC170 | STABILIZED_CORE</title>
 <style>
 :root {
-  --bg: #000; --aqua: oklch(75% 0.12 210); --gold: oklch(80% 0.18 85);
-  --flash-bg: oklch(15% 0.04 210); --glow: 0 0 clamp(4px, 1.5vw, 10px) oklch(75% 0.12 210 / 0.8);
+  --bg: #000; --aqua: oklch(75% 0.12 210); --ice: oklch(85% 0.15 230);
+  --leet: oklch(90% 0.4 100); --burn: oklch(55% 0.25 20); --quantum: oklch(70% 0.3 300);
 }
 * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: "Courier New", monospace; }
-body { background: var(--bg); color: oklch(90% 0 0); height: 100dvh; overflow: hidden; display: flex; flex-direction: column; align-items: center; touch-action: none; padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
-body.flash { background: var(--flash-bg); transition: background 80ms cubic-bezier(.1,.9,.1,1); }
-.ticker { width: 100%; background: oklch(10% 0 0); border-bottom: 1px solid oklch(18% 0 0); padding: 6px; font-size: 8px; color: oklch(40% 0.08 210); overflow: hidden; white-space: nowrap; }
-.ticker-move { display: inline-block; animation: scroll 95s linear infinite; }
+body { background: var(--bg); color: #fff; height: 100dvh; overflow: hidden; display: flex; flex-direction: column; align-items: center; padding: 8px; touch-action: none; }
+.ticker { width: 100%; border-bottom: 1px solid #222; padding: 4px; font-size: 7px; color: var(--aqua); white-space: nowrap; overflow: hidden; background: #080808; }
+.ticker-scroll { display: inline-block; animation: scroll 45s linear infinite; }
 @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
-.header { width: 360px; display: flex; justify-content: space-between; padding: 10px 0; border-bottom: 2px solid oklch(20% 0 0); }
-#yield { font-size: 26px; font-weight: 900; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
-.portfolio { width: 360px; display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px; padding: 5px 0; font-size: 7px; color: oklch(40% 0.08 210); border-bottom: 1px solid #111; }
-.grid-wrap { padding: 6px; background: oklch(12% 0 0); border-radius: 14px; border: 2px solid oklch(22% 0 0); margin-top: 10px; box-shadow: 0 0 20px rgba(0,0,0,1); }
-#grid { display: grid; grid-template-columns: repeat(9, 1fr); gap: 2px; width: 340px; height: 340px; }
-.cell { background: oklch(6% 0 0); border-radius: 2px; border: 1px solid oklch(14% 0 0); display: flex; align-items: center; justify-content: center; font-size: 14px; }
-.filled { background: var(--aqua); box-shadow: var(--glow); border: none; }
-.ignite-btn { width: 85%; padding: 20px; margin-top: auto; margin-bottom: 30px; border: 2px solid var(--aqua); background: transparent; color: var(--aqua); font-weight: 900; letter-spacing: 5px; border-radius: 50px; cursor: pointer; transition: 0.1s; }
-.ignite-btn:active { transform: scale(0.95); background: rgba(0,242,255,0.1); }
+.header { width: 100%; max-width: 380px; display: flex; justify-content: space-between; align-items: center; padding: 8px; border-bottom: 2px solid var(--leet); }
+#yield { font-size: 28px; font-weight: 900; color: var(--leet); text-shadow: 0 0 15px var(--leet); }
+.grid-container { width: 100%; max-width: 380px; aspect-ratio: 1/1; display: grid; grid-template-rows: repeat(3, 1fr); background: #0a0a0a; border-radius: 12px; padding: 4px; margin: 8px 0; border: 2px solid #222; }
+.layer-row { display: grid; grid-template-columns: repeat(3, 1fr); gap: 4px; }
+.mini-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 1px; background: #050505; }
+.cell { background: #000; border: 1px solid #111; aspect-ratio: 1/1; }
+.cell.filled { background: var(--ice); box-shadow: 0 0 10px var(--ice); }
+.tray-container { width: 100%; max-width: 380px; display: flex; gap: 8px; margin-top: 10px; }
+.tray { flex: 3; height: 100px; display: flex; justify-content: space-around; align-items: center; background: #0a0a0a; border-radius: 15px; border: 1px solid #222; }
+.piece-slot { width: 80px; height: 80px; display: flex; align-items: center; justify-content: center; padding: 30px; /* Grab Area Fix */ }
+.gas-burn-btn { flex: 1; height: 100px; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #111; border: 2px solid var(--burn); border-radius: 15px; color: var(--burn); font-weight: 900; font-size: 8px; cursor: pointer; }
+.ignite-btn { width: 90%; padding: 22px; margin-top: auto; margin-bottom: 15px; border: 4px solid var(--leet); color: var(--leet); font-weight: 900; border-radius: 50px; background: transparent; letter-spacing: 12px; box-shadow: 0 0 25px var(--leet); cursor: pointer; }
+.status-log { font-size: 7px; color: var(--aqua); margin-top: 4px; font-weight: 900; }
 </style>
 </head>
 <body onload="init()">
-<div class="ticker">
-  <div class="ticker-move">⛓️‍💥 duku: RC123 | MULTIPLIER: x1337 | CAP: 80M | STAKE: 20M | FETH: 0xed87...bacf | FROST: 0x2c77...0745 | BTC: 0x6a5c...a571 | ID: voluntaryistj.base.eth</div>
-</div>
+<div class="ticker"><div class="ticker-scroll">⛓️‍💥 duku: RC170 | STABILIZED_CORE | 963 Hz_RESONANCE | x31337_OVERDRIVE | ❤️‍🔥 10% BURN | ID: voluntaryist.frostchain</div></div>
 <div class="header">
-  <div><div style="color:var(--aqua); font-size:10px; font-weight:900;">DUKU_BLOCK: 13.37 FRST</div><div id="timer" style="font-size:18px; color:oklch(75% 0.15 330);">05:00</div></div>
-  <div style="text-align:right;"><small style="color:oklch(40% 0.08 210);">TOTAL_MINED</small><div id="yield">0.0000</div></div>
+  <div><div style="color:var(--aqua); font-size:9px;">ICE_CHAIN_CORE</div><div id="freq-tag" style="font-size:18px; color:var(--ice);">963 Hz</div></div>
+  <div style="text-align:right;"><div style="font-size:7px; color:var(--leet);">GENESIS_YIELD</div><div id="yield">0.0000</div></div>
 </div>
-<div class="portfolio">
-  <div>FETH:<span id="p-feth">0.0</span></div><div>FRST:<span id="p-frst">0.0</span></div><div>BTC:<span id="p-btc">0.0</span></div><div>USD:<span id="p-usd">0.0</span></div>
+<div class="grid-container" id="main-grid">
+  <div class="layer-row" id="L1"></div>
+  <div class="layer-row" id="L2" style="border: 1.5px solid var(--ice);"></div>
+  <div class="layer-row" id="L3"></div>
 </div>
-<div class="grid-wrap"><div id="grid"></div></div>
-<div id="tray" style="width:360px; height:120px; display:flex; justify-content:space-around; align-items:center; margin-top:14px;"></div>
-<button class="ignite-btn" onclick="ignite()">IGNITE x1337 GENE</button>
+<div class="tray-container">
+  <div class="tray" id="tray"></div>
+  <div class="gas-burn-btn" onclick="gasBurn()">⛽<br>SHUFFLE<br>+BURN</div>
+</div>
+<div class="status-log" id="log">STATUS: WAITING_FOR_963Hz_SYNC...</div>
+<button class="ignite-btn" onclick="ignite()">IGNITE RC170</button>
 <script>
-let board = Array(81).fill(0), b_timer = 300, active = false, audio = null, cells = [], dragging = null, streak = 0, sessionStart = 0;
-let mined = { feth: 0, frst: 0, btc: 0, usd: 0 };
-const shapes = [[[1,1,1],[1,1,1]], [[1,1,1]], [[1,1],[1,1]], [[1]], [[1,1,1,1]], [[1,1,1],[0,1,0]], [[1,1,1,1,1]]];
+let board = Array(81).fill(0), yieldVal = 0, active = false, audio = null, cells = [], dragging = null;
+const shapes = [[[1,1,1]], [[1,1],[1,1]], [[1]], [[1,1,1,1]], [[1,1,1],[0,1,0]]];
 function init() {
-  const g = document.getElementById("grid"), f = document.createDocumentFragment();
-  for (let i = 0; i < 81; i++) { const c = document.createElement("div"); c.className = "cell"; c.id = "c-" + i; f.appendChild(c); }
-  g.appendChild(f); cells = Array.from({length: 81}, (_, i) => document.getElementById(`c-${i}`));
+  const layers = ['L1', 'L2', 'L3'];
+  layers.forEach((l, li) => {
+    const row = document.getElementById(l);
+    for(let s=0; s<3; s++) {
+      const g = document.createElement('div'); g.className = 'mini-grid';
+      for(let c=0; c<9; c++) {
+        const cell = document.createElement('div'); cell.className = 'cell';
+        const idx = (li * 27) + (s * 9) + c; cell.id = 'c-'+idx;
+        row.appendChild(g); g.appendChild(cell); cells[idx] = cell;
+      }
+    }
+  });
   refreshTray();
 }
-function adaptiveGain(b) { const m = (Date.now() - sessionStart) / 60000; return b * Math.max(0.65, 1 - m * 0.025); }
-async function ignite() {
-  if (!audio) {
-    audio = new AudioContext(); if (audio.state === "suspended") await audio.resume();
-    sessionStart = Date.now(); active = true; document.querySelector(".ignite-btn").style.display = "none";
-    setupBinaural(38, -1, 0.002); setupBinaural(49.5, 1, 0.002);
-    setInterval(() => { if (b_timer > 0) { b_timer--; let m = Math.floor(b_timer / 60), s = b_timer % 60; document.getElementById("timer").innerText = `${m}:${s < 10 ? '0'+s : s}`; } else b_timer = 300; }, 1000);
+function ignite() {
+  active = true; document.querySelector('.ignite-btn').style.display = 'none';
+  audio = new (window.AudioContext || window.webkitAudioContext)();
+  document.getElementById('log').innerText = "963 Hz RESONANCE: LOCKED | x31337_SYNC: ACTIVE";
+}
+function gasBurn() {
+  if(!active) return;
+  yieldVal *= 0.90; document.getElementById('yield').innerText = yieldVal.toFixed(4);
+  document.getElementById('log').innerText = "GAS_BURN: 10% RECAPTURED | SHUFFLING TRAY...";
+  refreshTray();
+}
+function refreshTray() {
+  const t = document.getElementById('tray'); t.innerHTML = '';
+  for(let i=0; i<3; i++) {
+    const slot = document.createElement('div'); slot.className = 'piece-slot';
+    const s = shapes[Math.floor(Math.random() * shapes.length)];
+    const p = renderPiece(s, i); slot.appendChild(p); t.appendChild(slot);
   }
 }
-function setupBinaural(f, p, v) { const o = audio.createOscillator(), s = audio.createStereoPanner(), g = audio.createGain(); o.frequency.value = f; s.pan.value = p; g.gain.value = v; o.connect(s).connect(g).connect(audio.destination); o.start(); }
-function percussive(f, d, vol) { const o = audio.createOscillator(), g = audio.createGain(); o.frequency.setValueAtTime(f, audio.currentTime); o.connect(g).connect(audio.destination); g.gain.setValueAtTime(vol, audio.currentTime); g.gain.exponentialRampToValueAtTime(0.001, audio.currentTime + d); o.start(); o.stop(audio.currentTime + d); }
-function refreshTray() { const t = document.getElementById("tray"), f = document.createDocumentFragment(); for (let i = 0; i < 3; i++) { const s = shapes[Math.floor(Math.random() * shapes.length)], slot = document.createElement("div"); slot.className = "slot"; slot.style.width="100px"; slot.style.height="100px"; slot.style.display="flex"; slot.style.alignItems="center"; slot.style.justifyContent="center"; slot.appendChild(renderPiece(s, i, 20)); f.appendChild(slot); } t.innerHTML = ""; t.appendChild(f); }
-function renderPiece(s, idx, sz) {
-  const c = document.createElement("div"); c.style.display = "grid"; c.style.gridTemplateColumns = `repeat(${s[0].length}, ${sz}px)`; c.style.gap = "2px";
-  s.forEach(r => r.forEach(v => { const d = document.createElement("div"); d.style.width = sz + "px"; d.style.height = sz + "px"; if (v) { d.className = "cell filled"; } else d.style.opacity = "0"; c.appendChild(d); }));
-  if (idx !== -1) c.ontouchstart = (e) => startDrag(e, s, idx); return c;
+function renderPiece(s, idx) {
+  const c = document.createElement('div'); c.style.display='grid';
+  c.style.gridTemplateColumns=`repeat(${s[0].length}, 18px)`; c.style.gap='2px';
+  s.forEach(r => r.forEach(v => {
+    const d = document.createElement('div'); d.style.width='18px'; d.style.height='18px';
+    if(v) d.className='cell filled'; else d.style.opacity='0';
+    c.appendChild(d);
+  }));
+  if(idx !== -1) c.ontouchstart = (e) => startDrag(e, s, idx);
+  return c;
 }
-function startDrag(e, s, idx) { if (!active) return; e.preventDefault(); dragging = { s, idx, el: renderPiece(s, -1, 38) }; dragging.el.style.position = "fixed"; dragging.el.style.pointerEvents = "none"; dragging.el.style.zIndex = "1000"; document.body.appendChild(dragging.el); moveAt(e.touches[0]); }
-function moveAt(t) { if (!dragging) return; dragging.el.style.left = t.clientX - (dragging.el.offsetWidth / 2) + "px"; dragging.el.style.top = t.clientY + "px"; }
-document.addEventListener("touchmove", (e) => { if (dragging) { e.preventDefault(); moveAt(e.touches[0]); } }, { passive: false });
-function canPlace(id, s) { const r = Math.floor(id/9), c = id%9; for (let i=0; i<s.length; i++) for (let j=0; j<s[0].length; j++) if (s[i][j]) { let nr=r+i, nc=c+j; if (nr>=9 || nc>=9 || board[nr*9+nc]) return false; } return true; }
-document.ontouchend = (e) => {
-  if (!dragging) return; const t = document.elementFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY - 135);
-  if (t && t.classList.contains("cell")) {
-    const id = parseInt(t.id.split("-")[1]);
-    if (canPlace(id, dragging.s)) { placePiece(id, dragging.s); document.getElementById("tray").children[dragging.idx].innerHTML = ""; if ([...document.getElementById("tray").querySelectorAll(".slot")].every(s => s.innerHTML === "")) refreshTray(); }
-  }
-  dragging.el.remove(); dragging = null;
-};
-function placePiece(id, s) {
-  const r=Math.floor(id/9), c=id%9; s.forEach((row, i) => row.forEach((val, j) => { if (val) { board[(r+i)*9+c+j]=1; cells[(r+i)*9+c+j].className = "cell filled"; if(Math.random()<0.08) cells[(r+i)*9+c+j].innerText = "⛓️‍💥"; } }));
-  percussive(620 + (streak * 100), 0.04, 0.05); if (navigator.vibrate) navigator.vibrate([15, 8, 25]); checkClears();
+function startDrag(e, s, idx) {
+  if(!active) return; e.preventDefault();
+  dragging = { s, idx, el: renderPiece(s, -1) };
+  dragging.el.style.position='fixed'; dragging.el.style.zIndex='1000';
+  dragging.el.style.pointerEvents='none'; document.body.appendChild(dragging.el);
+  moveAt(e.touches[0]);
 }
-function checkClears() {
-  let rs=[], cs=[], sqs=[], cleared=[];
-  for (let i=0; i<9; i++) {
-    let rF=true, cF=true; for (let j=0; j<9; j++) { if (!board[i*9+j]) rF=false; if (!board[j*9+i]) cF=false; }
-    if (rF) { rs.push(i); for (let j=0; j<9; j++) cleared.push(i*9+j); }
-    if (cF) { cs.push(i); for (let j=0; j<9; j++) cleared.push(j*9+i); }
-  }
-  for (let y=0; y<9; y+=3) for (let x=0; x<9; x+=3) {
-    let sF=true; for (let i=0; i<3; i++) for (let j=0; j<3; j++) if (!board[(y+i)*9+(x+j)]) sF=false;
-    if (sF) { sqs.push({y,x}); for (let i=0; i<3; i++) for (let j=0; j<3; j++) cleared.push((y+i)*9+(x+j)); }
-  }
-  if (cleared.length > 0) {
-    streak++; 
-    let base = (cleared.length/9) * 1.337 * (1 + streak * 0.1);
-    mined.feth += base * 0.05; mined.frst += base; mined.btc += base * 0.0001; mined.usd += base * 0.5;
-    document.getElementById("yield").innerText = (mined.feth).toFixed(4);
-    document.getElementById("p-feth").innerText = mined.feth.toFixed(3);
-    document.getElementById("p-frst").innerText = mined.frst.toFixed(1);
-    document.getElementById("p-btc").innerText = mined.btc.toFixed(5);
-    document.getElementById("p-usd").innerText = mined.usd.toFixed(1);
-    document.body.classList.add("flash"); setTimeout(() => document.body.classList.remove("flash"), 80);
-    cleared.forEach(i => { board[i]=0; cells[i].innerText = ''; });
-    requestAnimationFrame(() => cleared.forEach(i => cells[i].className = "cell"));
-    percussive(1337 + (streak * 200), 0.4, 0.08); if (navigator.vibrate) navigator.vibrate([30, 20, 30, 40, 20, 50]);
-  } else { streak = 0; }
+function moveAt(t) {
+  if(!dragging) return;
+  dragging.el.style.left = t.clientX - (dragging.el.offsetWidth/2) + 'px';
+  dragging.el.style.top = (t.clientY - 135) + 'px'; // S25 FE OFFSET
 }
+document.addEventListener('touchmove', e => { if(dragging) { e.preventDefault(); moveAt(e.touches[0]); } }, {passive:false});
+document.ontouchend = e => { if(dragging) { dragging.el.remove(); dragging = null; } };
 </script>
 </body>
 </html>
